# Lufthansa-SKYPY

./: .gitignore  README.md  app.py  pyproject.toml  schedule_payload.json
commands/: generate_data.py
data/: crew.csv  flights.csv
output/: roster_output.json
src/skypy/: __init__.py  app.py  errors.py
src/skypy/io/: __init__.py  csv_reader.py  serializers.py
src/skypy/models/: __init__.py  crew.py  flight.py  roster.py  violation.py
src/skypy/routes/: __init__.py  registry.py  report.py  roster.py  schedule.py
src/skypy/schemas/: __init__.py
src/skypy/schemas/requests/: __init__.py  schedule.py
src/skypy/schemas/responses/: __init__.py  report.py  roster.py  schedule.py
src/skypy/services/: __init__.py  costs.py  pairing.py  scheduler.py
src/skypy/services/rules/: __init__.py  resting_rules.py  roster_validator.py
src/skypy/services/uitls/: __init__.py  flight_neighbors.py
src/skypy/state/: __init__.py  schedule_store.py
tests/: conftest.py
tests/unit/: test_rules_and_roster.py
